--- a/MVC_Cinema_app/Views/Genres/Create.cshtml
+++ b/MVC_Cinema_app/Views/Genres/Create.cshtml
@@ -1,34 +1,35 @@
 ﻿@model BusinessLogic.DTOs.GenreDTO
 
 @{
-    Layout = "~/Views/Shared/MinimalLayout.cshtml";
+    Layout = "~/Views/Shared/_DashboardLayout.cshtml";
     ViewData["Title"] = "Create";
 }
 
-<h1>Створити</h1>
-
-<h4>Жанр</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label">Назва жанру</label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+<div class="cinema-main">
+    <h2>Створити жанр</h2>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card-stats" style="--index: 1;">
+                <form asp-action="Create" method="post">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="Name" class="control-label">Назва жанру</label>
+                        <input asp-for="Name" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Створити" class="btn btn-primary" />
+                        <a asp-action="Index" class="btn btn-secondary">Назад до списку</a>
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Створити" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Назад до списку</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
