--- a/MVC_Cinema_app/Views/Genres/Delete.cshtml
+++ b/MVC_Cinema_app/Views/Genres/Delete.cshtml
@@ -1,28 +1,27 @@
 ﻿@model BusinessLogic.DTOs.GenreDTO
 
 @{
-    Layout = "~/Views/Shared/MinimalLayout.cshtml";
+    Layout = "~/Views/Shared/_DashboardLayout.cshtml";
     ViewData["Title"] = "Delete";
 }
 
-
-
-<h3>Ви впевнені, що хочете видалити це?</h3>
-<div>
-    
+<div class="cinema-main">
+    <h2>Видалити жанр</h2>
+    <h3>Ви впевнені, що хочете видалити цей жанр?</h3>
     <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            Назва жанру:
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-    </dl>
-
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Видалити" class="btn btn-danger" /> |
-        <a asp-action="Index">Назад до списку</a>
-    </form>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card-stats" style="--index: 1;">
+                <dl class="row">
+                    <dt class="col-sm-4">Назва жанру:</dt>
+                    <dd class="col-sm-8">@Html.DisplayFor(model => model.Name)</dd>
+                </dl>
+                <form asp-action="Delete">
+                    <input type="hidden" asp-for="Id" />
+                    <input type="submit" value="Видалити" class="btn btn-danger" />
+                    <a asp-action="Index" class="btn btn-secondary">Назад до списку</a>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
