--- a/MVC_Cinema_app/Views/Genres/Details.cshtml
+++ b/MVC_Cinema_app/Views/Genres/Details.cshtml
@@ -1,25 +1,25 @@
 ﻿@model BusinessLogic.DTOs.GenreDTO
 
 @{
-    Layout = "~/Views/Shared/MinimalLayout.cshtml";
+    Layout = "~/Views/Shared/_DashboardLayout.cshtml";
     ViewData["Title"] = "Details";
 }
 
-<h1>Деталі жанру</h1>
-
-<div>
-    <h4>Жанр</h4>
+<div class="cinema-main">
+    <h2>Деталі жанру</h2>
     <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            Назва жанру:
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Відредагувати</a> |
-    <a asp-action="Index">Назад до списку</a>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card-stats" style="--index: 1;">
+                <dl class="row">
+                    <dt class="col-sm-4">Назва жанру:</dt>
+                    <dd class="col-sm-8">@Html.DisplayFor(model => model.Name)</dd>
+                </dl>
+                <div>
+                    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-primary">Редагувати</a>
+                    <a asp-action="Index" class="btn btn-secondary">Назад до списку</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
