--- a/MVC_Cinema_app/Views/Genres/Index.cshtml
+++ b/MVC_Cinema_app/Views/Genres/Index.cshtml
@@ -1,36 +1,34 @@
 ﻿@model IEnumerable<BusinessLogic.DTOs.GenreDTO>
 
 @{
-    Layout = "~/Views/Shared/MinimalLayout.cshtml";
+    Layout = "~/Views/Shared/_DashboardLayout.cshtml";
     ViewData["Title"] = "Genres";
 }
 
-<h1>Жанри</h1>
-
-<p>
-    <a asp-action="Create">Додати новий жанр</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-               Назва жанру
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Редагування</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Деталі</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Видалення</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="cinema-main">
+    <h2>Жанри</h2>
+    <p>
+        <a asp-action="Create" class="btn btn-primary">Додати новий жанр</a>
+    </p>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Назва жанру</th>
+                <th>Дії</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr style="--row-index: @Model.ToList().IndexOf(item)">
+                    <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-primary">Редагувати</a>
+                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-info">Деталі</a>
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Видалити</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
