--- a/MVC_Cinema_app/Views/MoviePrices/Index.cshtml
+++ b/MVC_Cinema_app/Views/MoviePrices/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<BusinessLogic.DTOs.MoviePriceDTO>
 
 @{
-    Layout = "~/Views/Shared/MinimalLayout.cshtml";
+    Layout = "~/Views/Shared/_DashboardLayout.cshtml";
     ViewData["Title"] = "Movie Prices";
 }
 
@@ -32,9 +32,9 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Редагування</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Деталі</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Видалення</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-primary">Редагувати</a>
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-info">Деталі</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Видалити</a>
             </td>
         </tr>
 }
